--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
 ﻿.git/
 
-lagoujiaoyu/
+lagoujiaoyu/32个Java面试必考点/
 
 geekbang/
+
+othernotes/
 
 readingnotes/Docker技术入门与实战/
 readingnotes/Docker生产环境实践指南/
