--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,26 @@
 
 lagoujiaoyu/32个Java面试必考点/
 
-geekbang/
+geekbang/视频/Elasticsearch核心技术与实战_阮一鸣/视频/
+geekbang/视频/Nginx核心知识100讲_陶辉/视频/
+geekbang/视频/玩转Git三剑客/
+geekbang/视频/玩转Spring全家桶/code/
+geekbang/视频/玩转Spring全家桶/code_bak/
+geekbang/视频/玩转Spring全家桶/old/
+geekbang/视频/玩转Spring全家桶/teachercode/
+geekbang/视频/玩转Spring全家桶/视频/
+geekbang/视频/微服务架构实战160讲/
 
-othernotes/
+geekbang/专栏/GolangCore36Courses/
+geekbang/专栏/Java业务开发常见错误100例/teachercode/
+geekbang/专栏/Kafka核心技术与实战/
+geekbang/专栏/Linux性能优化实战/
+geekbang/专栏/SQL必知必会/
+geekbang/专栏/编程范式游记_陈皓/
+geekbang/专栏/从0开始学架构/
+geekbang/专栏/深入拆解Java虚拟机/
+geekbang/专栏/数据结构与算法之美/
+
 
 readingnotes/Docker技术入门与实战/
 readingnotes/Docker生产环境实践指南/
